fix: update transport to StreamableHTTPServerTransport and update docs

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,33 @@ ENABLE_RATE_LIMITING=true
 # Logging level (debug, info, warn, error)
 # Use 'debug' in development, 'info' or 'warn' in production
 LOG_LEVEL=info
+
+# Authentication Configuration
+# Enable/disable authentication (true/false)
+# Set to false for local development, true for production
+AUTH_ENABLED=false
+
+# Authentication mode: 'oauth' for production, 'mock' for development
+AUTH_MODE=mock
+
+# Mock authentication token for development (only used when AUTH_MODE=mock)
+MOCK_AUTH_TOKEN=dev_token_12345
+
+# CORS Configuration
+# Comma-separated list of allowed origins
+# Development: http://localhost:3000,http://localhost:5173
+# Production: https://chatgpt.com
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# SSL/TLS Configuration (Production)
+# Path to SSL certificate file
+SSL_CERT_PATH=
+
+# Path to SSL private key file
+SSL_KEY_PATH=
+
+# Enable HTTPS server (true/false)
+ENABLE_HTTPS=false
+
+# Force HTTPS redirect in production (true/false)
+FORCE_HTTPS=false
