Migrate from deprecated SSE to Streamable HTTP transport (MCP 2025-03-26)
- Replaced SSEServerTransport with StreamableHTTPServerTransport
- Updated server to use modern MCP Streamable HTTP specification
- Simplified endpoint structure: single /mcp endpoint for all requests
- Added HTTP server configuration (PORT and HOST env variables)
- Updated CORS headers to include mcp-session-id
- Fixed TypeScript strict mode compatibility with type assertion
- Updated README with Streamable HTTP documentation and ngrok setup
- Added output formatting guidelines to prompts for better ChatGPT responses

Breaking Changes:
- Removed /sse endpoint (now uses /mcp only)
- Transport type changed from 'sse' to 'streamable-http'
- Requires MCP clients to support Streamable HTTP transport

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,9 @@ ENABLE_RATE_LIMITING=true
 # Logging level (debug, info, warn, error)
 # Use 'debug' in development, 'info' or 'warn' in production
 LOG_LEVEL=info
+
+# HTTP Server Configuration
+# Port for the HTTP server (default: 3000)
+PORT=3000
+# Host for the HTTP server (default: localhost)
+HOST=localhost
